--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/core": "^5.0.0-alpha.54",
+    "@mui/icons-material": "^5.3.0",
     "@mui/material": "^5.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -12,5 +15,17 @@
   },
   "scripts": {
     "start": "react-scripts start"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
